Continued making HIPification changes
- Adjusted Makefile to link to miopen library
- Adjusted normalizer.cpp to use miopen rather than hipDNN
- Updated macros in hpc_helper.hpp
- Updated fma intrinsic in common.hpp

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,12 +1,13 @@
 HIPCC = hipcc
-LIBS = -lz -I/usr/include/hdf5/serial -L/usr/lib/x86_64-linux-gnu/hdf5/serial -lhipDNN
-# HDF5_LIB=-L/home/linuxbrew/.linuxbrew/lib
-# HDF5_INCLUDE=-I/home/linuxbrew/.linuxbrew/include
+LIBS = -lz -lmiopen -I$(ROCM_INC)/miopen -L$(ROCM_LIB)
 
 # LIBS = -lhdf5 -lcudnn -I/usr/include/hdf5/serial -L/usr/lib -L/usr/lib/x86_64-linux-gnu/hdf5/serial -I/usr/local/include -L/usr/local/lib -L/usr/local/lib 
 # NVCCFLAGS= -std=c++11 --ptxas-options=-v --default-stream per-thread  -O2 -lineinfo -gencode=arch=compute_86,code=sm_86 --compiler-options -Wall -DSDTW -DFP16 -DNO_REF_DEL -DNV_DEBUG 
 HIPCFLAGS = -O2 -lineinfo -Wall -DNO_REF_DEL -lwb#-DNV_DEBUG#-DFP16#-DNV_DEBUG #--DFP16 
 CXXFLAGS= -fopenmp -march=native -O2#-DNV_DEBUG
+
+# To avoid the warnings about ignoring the return value of functions declared with 'nodiscard' (want the return values checked)
+CXXFLAGS += -Wno-unused-result
 # export HDF5_PLUGIN_PATH=$(HOME)/.local/hdf5/lib/plugin
 
 # ifdef READ_UNTIL
